1.74    2015-03-04      Add Linux::Debian;
                        Add MacOSX::v10_*;
                        Add perl 5.6.2 support
                          all the above thanks to Dale Evans

1.73    2014-08-01      Add support for Android

1.72    2014-04-16      Add support for Bitrig, an OpenBSD fork;
                        Check $^O case-insensitively as some OSes
                          aren't particularly consistent

1.71    2013-01-27      Bugfix, better tests for negative assertions,
                          also from Yanick

1.7     2012-11-20      Add support for negative assertions in
                          Devel::AssertOS, thanks to Yanick Champoux

1.64    2011-04-25      Add support for GNU/kFreeBSD

1.63    2010-05-29      $^O for VOS is sometimes VOS, sometimes vos;
                        VOS supports POSIX shell redirections

1.62    2010-05-21      Add OS X 10.5 platform and EBCDIC family

1.61    2009-04-25      Better code coverage in tests;
                        Fix bug in script - not copying all members of
                          a family, only those it checked up until the
                          OS it's running on

1.6     2009-04-21      Only ask to confirm what this platform is in
                          Makefile.PL if AUTOMATED_TESTING is set;
                        Add MidnightBSD

1.55    2009-04-16      This time with the damned changes - really
                          shouldn't be doing releases at 1 am :-)

1.54    2009-04-16      And more irritating little changes, this time
                          to make tests pass on 5.6.2

1.53    2009-04-15      Grargh!  5.10.0 doesn't fully populate %INC
                          if a module dies when we use() it. HATE.
                          So need another way to find the files in the
                          scripts.  Grr. Hate. Kill.

1.52    2009-04-15      Scalar context bug fixed in script, thanks to
                          Mike Kelly