@@ -105,3 +105,4 @@ lib/Devel/AssertOS/Android.pm
 MANIFEST.SKIP
 lib/Devel/AssertOS/Linux/Debian.pm
 t/63-kwalitee.t
+lib/Devel/AssertOS/Minix.pm
