@@ -1,3 +1,5 @@
+XXXX    XXXXXXXXXX      Add Minix
+
 1.74    2015-03-04      Add Linux::Debian;
                         Add MacOSX::v10_*;
                         Add perl 5.6.2 support
